Fix possible overlap in Speed Dial.
Text size may increases due to localization and this
may cause overlap of label and button in Speed Dial.
Layout fixed to handle it gracefilly, ellipsizing label
if needed. String resources representing fonts marked as
non-translatable for aapt.

Change-Id: I81423c70ff54837c101888300c8b2d5aae7b7dd0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -768,17 +768,17 @@
 
     <!-- The font-family to use for the "speed dial" label on the favorites menu.
          Do not translate. -->
-    <string name="favorites_menu_speed_dial_font_family">sans-serif-light</string>
+    <string name="favorites_menu_speed_dial_font_family" translatable="false">sans-serif-light</string>
 
     <!-- The font-family to use for the "all contacts" label on the favorites menu.
          Do not translate. -->
-    <string name="favorites_menu_all_contacts_font_family">sans-serif</string>
+    <string name="favorites_menu_all_contacts_font_family" translatable="false">sans-serif</string>
 
     <!-- The font-family to use for the text inside the searchbox.
          Do not translate. -->
-    <string name="search_font_family">sans-serif</string>
+    <string name="search_font_family" translatable="false">sans-serif</string>
 
     <!-- The font-family to use for tab text.
          Do not translate. -->
-    <string name="tab_font_family">sans-serif</string>
+    <string name="tab_font_family" translatable="false">sans-serif</string>
 </resources>
